# CV_quad

./: README.md
GS/beginner_tutorials/: CMakeLists.txt  package.xml
GS/beginner_tutorials/include/: get_img.h  quad_board.h  send_pos.h
GS/beginner_tutorials/src/: listener.cpp  send_pos.cpp
ORB_changes/: CMakeLists.txt  ExampleGroovyOrNewer.launch  calib.txt
ORB_changes/include/: MapPublisher.h  quad_board.h
ORB_changes/src/: MapPublisher.cc  quad_board.cc
optical_on_odi/opticalflow/: capture.cpp  capture.h  main.cpp  mainwindow.cpp  opticalflow.cpp  opticalflow.h  opticalflow.pro  quad_board.cpp
optical_on_odi/opticalflow_v2/: capture.h  opticalflow.cpp  opticalflow.h  quad_board.cpp  quad_board.h
pc/src/: get_img.cpp  quad_board.cpp
quad_send/: mainwindow.h  quad_board.h  quad_send.pro
quad_send/on_odroid/: capture.cpp  capture.h  main.cpp  mainwindow.cpp  mainwindow.h  quad_board.cpp  quad_board.h  quad_send.pro  run_quad_send.sh
quad_send/test_on_pc/: capture.cpp  capture.h  main.cpp  mainwindow.cpp  plot_opencv.h  quad_board.cpp
